feat: add production-ready Docker setup for backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=backend
 
 # MongoDB - replace with your connection (or set env var SPRING_DATA_MONGODB_URI)
-spring.data.mongodb.uri=mongodb+srv://zken06231:nOwSjfE3nhAeJnUT@cluster0.qxxtvne.mongodb.net/yourDatabaseName?retryWrites=true&w=majority
 
+spring.data.mongodb.uri=${MONGODB_URI}
 # Multipart file size limit (5MB)
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
 # Server port (optional)
-#server.port=5000
+# This tells Spring to use the $PORT env var, or default to 8080 if not found
+server.port=${PORT:8080}
+
